# knaptruck

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  compare_solutions.py  input.txt  maim  main  main.cpp
Approaches/: Backtracking.cpp  Backtracking.h  DynamicProgramming.cpp  DynamicProgramming.h  Exhaustive.cpp  Exhaustive.h  Greedy.cpp  Greedy.h
InputOutput/: Input.cpp  Input.h  Output.cpp  Output.h  ProgressBar.cpp  ProgressBar.h
Menu/: Menu.cpp  Menu.h  MenuTesting.cpp  MenuTesting.h
Output/: Output.cpp  Output.h  ProgressBar.cpp  ProgressBar.h
ReadData/: read.cpp  read.h
datasets/: test.csv  testTruck.csv  test_01.csv  test_02.csv  test_03.csv  test_04.csv  test_05.csv  truckTest_02.csv  truckTest_03.csv  truckTest_04.csv  truckTest_05.csv
docs/html/: _backtracking_8cpp.html  _backtracking_8h.html  _backtracking_8h_source.html  _dynamic_programming_8cpp.html  _dynamic_programming_8cpp.js  _dynamic_programming_8h.html  _dynamic_programming_8h.js  _dynamic_programming_8h_source.html  _exhaustive_8cpp.html  _exhaustive_8cpp.js  _exhaustive_8h.html  _exhaustive_8h_source.html  _greedy_8cpp.html  _greedy_8h.html  _greedy_8h_source.html  _menu_8cpp.html  _menu_8cpp.js  _menu_8h.js  _menu_8h_source.html  _output_8cpp.html  _output_8h_source.html  _progress_bar_8h.js  _progress_bar_8h_source.html  classes.html  (+16 more)
performance_report/: README.md  RUNTIME_VISUALIZATION.md  compare_greedy.py  run_performance_analysis.sh  runtime_visualization.py  save_performance_data.py  visualization.py
performance_results/: runtime_report.html  sample_performance_data.csv
(+101 files in other folders)
